workspace-sf/force-app/main/default/objects/Oferta__c/Oferta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as Ofertas.</description>
    <label>Sugestão de oferta</label>
    <nameField>
        <label>Titulo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sugestão de ofertas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>