workspace-sf/force-app/main/default/objects/Oferta__c/fields/CodigoPrecificaProduto__c.field-meta.xml
<CustomField>
    <fullName>CodigoPrecificaProduto__c</fullName>
    <formula>Produto__r.CodigoPrecificaProduto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Precificação do Produto</label>
    <type>Text</type>
</CustomField>