workspace-sf/force-app/main/default/objects/Oferta__c/fields/CodigoProduto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProduto__c</fullName>
    <formula>Produto__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Produto</label>
    <type>Text</type>
</CustomField>