workspace-sf/force-app/main/default/objects/Oferta__c/fields/Customizavel__c.field-meta.xml
<CustomField>
    <fullName>Customizavel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permitir personalização do orçamento no momento da contratação do seguro</description>
    <label>Permitir personalização do orçamento</label>
    <type>Checkbox</type>
</CustomField>