workspace-sf/force-app/main/default/objects/Oferta__c/fields/GerarDocumento__c.field-meta.xml
<CustomField>
    <fullName>GerarDocumento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gerar documento PDF</description>
    <label>Permitir Gerar Documento (PDF)</label>
    <type>Checkbox</type>
</CustomField>