workspace-sf/force-app/main/default/objects/Oferta__c/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <formula>TEXT(Produto__r.ProdutoTecnico__r.Segmento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento</label>
    <type>Text</type>
</CustomField>