workspace-sf/force-app/main/default/objects/Oferta__c/fields/Versao__c.field-meta.xml
<CustomField>
    <fullName>Versao__c</fullName>
    <formula>Produto__r.Versao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Versão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>