workspace-sf/force-app/main/default/objects/Oferta__c/fields/VigenciaFim__c.field-meta.xml
<CustomField>
    <fullName>VigenciaFim__c</fullName>
    <label>Fim da vigência</label>
    <type>Date</type>
</CustomField>