workspace-sf/force-app/main/default/objects/Oferta__c/fields/VigenciaInicio__c.field-meta.xml
<CustomField>
    <fullName>VigenciaInicio__c</fullName>
    <label>Início da vigência</label>
    <required>true</required>
    <type>Date</type>
</CustomField>