workspace-sf/force-app/main/default/objects/Oferta__c/validationRules/BloquearEdicaoQuandoOfertaAtiva.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEdicaoQuandoOfertaAtiva</fullName>
    <active>false</active>
    <description>Bloqueia a edição da Oferta quando a mesma está ativa.</description>
    <errorConditionFormula>AND
( NOT( ISNEW() )
, Ativo__c == TRUE
, NOT( ISCHANGED( Ativo__c ) )
, NOT( ISCHANGED( VigenciaFim__c ) )
, NOT( ISCHANGED( Customizavel__c ) )
, NOT( ISCHANGED( GerarDocumento__c ) )
)</errorConditionFormula>
    <errorMessage>Não é possível alterar uma Oferta Ativa.</errorMessage>
</ValidationRule>