workspace-sf/force-app/main/default/objects/Oferta__c/validationRules/BloquearEdicaoQuandoOfertaInativa.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEdicaoQuandoOfertaInativa</fullName>
    <active>true</active>
    <description>Bloqueia a edição da Oferta quando a mesma está inativa.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    TEXT(Status__c) = &apos;Inativo&apos;
)</errorConditionFormula>
    <errorMessage>Não é possível alterar uma Oferta Inativa.</errorMessage>
</ValidationRule>