workspace-sf/force-app/main/default/objects/Oferta__c/validationRules/ValidaInicioVigencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaInicioVigencia</fullName>
    <active>true</active>
    <description>Validar se a data do início da vigência é maior ou igual a atual.</description>
    <errorConditionFormula>AND(
				OR(
								ISNEW(), 
								ISCHANGED(VigenciaInicio__c)
				),
				VigenciaInicio__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>VigenciaInicio__c</errorDisplayField>
    <errorMessage>A data deve ser maior ou igual a atual.</errorMessage>
</ValidationRule>