workspace-sf/force-app/main/default/objects/Oferta__c/validationRules/ValidaProduto.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaProduto</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Produto__c == null , true, false)</errorConditionFormula>
    <errorDisplayField>Produto__c</errorDisplayField>
    <errorMessage>Produto não Informado, por favor informar um produto.</errorMessage>
</ValidationRule>