workspace-sf/force-app/main/default/objects/Oferta__c/validationRules/ValidarFimVigencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarFimVigencia</fullName>
    <active>true</active>
    <description>Validar se a data do fim da vigência é maior ou igual a atual e data de início da vigência.</description>
    <errorConditionFormula>AND(
				OR(
								ISNEW(), 
								ISCHANGED(VigenciaFim__c),
								ISCHANGED(VigenciaInicio__c)
				),
				OR(
								VigenciaFim__c &lt; TODAY(),
								VigenciaFim__c &lt; VigenciaInicio__c
				)
)</errorConditionFormula>
    <errorDisplayField>VigenciaFim__c</errorDisplayField>
    <errorMessage>A data deve ser maior ou igual a atual e a data de início.</errorMessage>
</ValidationRule>