workspace-sf/force-app/main/default/objects/Oferta__c/validationRules/ValidarStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarStatus</fullName>
    <active>true</active>
    <description>Validar preenchimento de status.</description>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status obrigatório.</errorMessage>
</ValidationRule>