workspace-sf/force-app/main/default/objects/Oferta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>Ativo__c</columns>
    <columns>CodigoProduto__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>